# miniCmakeLearning

./: CMakeLists.txt  README.md
src/: CMakeLists.txt
